   - Added jumboscripted ..scriptable readout for buffers > 64Kwords.
   - Check for gd in configure and create appropriate compiler/ld
     options.
SpecTcl-3.0-009
   - Defect 197 : scaling.h the averaging boxes for 2d average reduction
                  were too wide by a channel
   - Defect 200 : long/int mixup that is 64 bit unclean in gamma1DL.cpp
                  This makes 64bit gamma1dL spectra have only everyother
                  channel set and can overwrite past the end of the spectrum
                  as well fi the parameter range covers more than the
                  spectrum range!!
   - Defect 209 : more issues like Defect 200.
   - Defect 210 : SpecTcl/AppInit.cpp had sscanf of int -> long. 64 bit bad.
   - Defect 211 : Creating g1 spectrum with empty parameter list crashes with
                  SEGFLT.
   - Fix erroneous alignment mask computation in allocator.c that could lead
       to Xamine free list corruption
   - Fix error in wysiwyg printing when zoomed.
   - Fix an off by one error in scaling 1-d lineary channels.  For small scales
     and channel values the hieght of the channel was visibly lower than the 
     corresponding tick mark.
   - Enh 194    : provide more precision in output of integration.

  Released September 21, 2006

3.0-010  
	Oct. 17, 2006 BZ 219  - output the contents of VERSIOn to TCL's stdout
        Nov 09, 2006 Added CHANGELOG to installation.
        Nov 17, 2006 Fix defect 228 - Printer defaults can be whacky resulting
                     in prints killing Xamine or not working.
        Nov 17, 2006 No longer distribute setup.tcl with Skel.
        Dec 19, 2006 Fix CXdrInputStream.cpp per D. Caussyn's catch,
                    delete [] m_pBuffer not delete m_pBuffer
Released January 15, 2007

3.0-011
	Feb 12, 2007 - BZ 232 - fire traces on treevariable -set
        so that any associated GUI elements are updated.
	Feb 16, 2007 - BZ 292 - Synch gpVersion with VERSION in config.h